# Spirit-Base

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
benchmarks/: CMakeLists.txt  ansiEscapeParsing.cpp  streamableMessages.cpp
cmake/: Macros.cmake  benchmarking.cmake  build_extLibs.cmake  plotBenchmark.py
docs/: CMakeLists.txt
examples/: AnsiCodes.cpp  AnsiColors.cpp  CMakeLists.txt  Errors.cpp  Logger.cpp  Loggers.cpp  testCoreIntegration.cpp
include/SPIRIT/: Base.hpp  Core.hpp  config.hpp
include/SPIRIT/Base/Concepts/: Concepts.hpp
include/SPIRIT/Base/Configuration/: config.hpp
include/SPIRIT/Base/Error/: Error.hpp
include/SPIRIT/Base/Logging/: AnsiEscape.hpp  AnsiStream.hpp  Format.hpp  Logger.hpp  Logger_inl.hpp  Message.hpp
include/SPIRIT/Base/Logging/details/: AnsiEscapeImpl.hpp  FileBuf.hpp  MessageBase.hpp
include/SPIRIT/Base/Utils/Time/: Clock.hpp  Timer.hpp
include/SPIRIT/Concepts/: Concepts.hpp
include/SPIRIT/Error/: Error.hpp
include/SPIRIT/Logging/: AnsiEscape.hpp  AnsiSequence.hpp  AnsiSequence_inl.hpp  AnsiStream.hpp  ColoredStream.hpp  FileBuf.hpp  Format.hpp  Logger.hpp  Logger_inl.hpp  Logging.hpp  Logging_inl.hpp  Message.hpp
include/SPIRIT/Logging/details/: AnsiEscapeImpl.hpp  AnsiStreamWrapper.hpp  FileBuf.hpp  Message.hpp  MessageBase.hpp
include/SPIRIT/Utils/: NonCopyable.hpp
include/SPIRIT/Utils/Time/: Clock.hpp  Timer.hpp
include/SPIRIT/Utils/Traits/: FunctionTraits.hpp
src/SPIRIT/Error/: CMakeLists.txt  Error.cpp
src/SPIRIT/Logging/: AnsiSequence.cpp  AnsiStream.cpp  CMakeLists.txt  ColoredStream.cpp  Logger.cpp  Logging.cpp
src/SPIRIT/Utils/: Bucket.inl  CMakeLists.txt
src/SPIRIT/Utils/Time/: Clock.cpp  Timer.cpp
test/: CMakeLists.txt  testAnsiEscape.cpp  testAnsiStream.cpp  testConcepts.cpp  testFileBuf.cpp  testLogger.cpp  testing.cmake
